v.0.5 picture processing, AWS cloud support